[metadata]
name        = libvirt-nethook-helper
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
url          = https://github.com/FelixSchwarz/libvirt-nethook-helper
license     = MIT
license_file = LICENSE.txt

long_description = file:README.md
long_description_content_type = text/markdown


[options]
python_requires = >= 3.6
packages = find:
namespace_packages = schwarz
zip_safe = true

install_requires =
    # pkg_resources/namespace package
    setuptools

scripts =
    scripts/lv-setup-routed-ips

